[MCgltf]重重构